k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datavault
  namespace: datavault
  labels:
    app: datavault
spec:
  type: ClusterIP
  selector:
    app: datavault
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
